Fixed Bugs which prevented Endpoint from working. Added other small clean ups